--- a/index.html
+++ b/index.html
@@ -5,52 +5,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summarizr</title>
+    <title>Summarizr | Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
-    <header>
-        <h4>Final Year Project</h4>
-    </header>
-
-    <div class="container content">
-        <h2>SUMMARIZR</h2>
-        <p>Analyze and Summarize your articles on the fly..</p>
-
-        <div class="article-form">
-            <form action="post" id="form">
-                <div class="form-group">
-                    <label for="title" class="label">Title</label>
-                    <input type="text" name="title" id="title_field" class="form-control" placeholder="Title goes here">
+    <div class="container">
+        <div class="row">
+            <div class="offset-md-2 col-md-8 content mt-5">
+                <div class="row">
+                    <div class="col-md-10 mb-6">
+                        <h2 id="appTitle">SUMMARIZR</h2>
+                        <p id="appTagline">Analyze and Summarize your articles on the fly..</p>
+                    </div>
+                    <div class="col-md-2 mb-6">
+                        <img src="assets/img/polylogo.jpg" alt="logo" width="70px" />
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="article" class="label">Article</label>
-                    <textarea name="article" id="article_field" cols="30" rows="10" placeholder="Paste the article body here.." class="form-control"></textarea>
+                <!-- Article Form -->
+                <div class="article-form">
+                    <form>
+                        <div class="form-group">
+                            <label for="title" class="label">Sentences</label>
+                            <input type="text" name="title" class="form-control" placeholder="How short should the summary be?">
+                        </div>
+                        <div class="form-group">
+                            <label for="article" class="label">Article</label>
+                            <textarea name="article" cols="30" rows="10" placeholder="Paste the article body here.." class="form-control"></textarea>
+                        </div>
+                        <div class="form-group text-center mt-4">
+                            <button type="button" name="summarize" class="btn btn-warning">Generate Summary</button>
+                            <button type="button" name="analyze" class="btn btn-info" onclick="window.location.href = '/projects/summarizer/analysis.html'">Analyze Article</button>
+                            <button type="button" name="reset" class="btn btn-danger">Reset Form</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group text-center">
-                    <button type="submit" name="summarize" class="btn btn-warning">Generate Summary</button>
-                    <button type="submit" name="analyze" class="btn btn-info ">Analyze Article</button>
-                    <button type="submit" name="reset" class="btn btn-danger">Reset Form</button>
+                <!-- Article Summary -->
+                <div class="article-summary-container mt-4">
+                    <div class="article-title"></div>
+                    <div class="article-summary"></div>
+                    <div class="form-group text-center" id="summaryNavButtons">
+                        <button type="button" name="previous" class="btn btn-warning">Go Back</button>
+                        <button type="button" name="formatSummery" class="btn btn-secondary">Format</button>
+                        <button type="button" name="print" class="btn btn-success ">Print</button>
+                        <button type="button" name="analyze" class="btn btn-info" onclick="window.location.href = '/projects/summarizer/analysis.html'">Analyze Article</button>
+                    </div>
                 </div>
-            </form>
-        </div>
-
-        <div class="article-summary-container">
-            <div class="article-title"></div>
-            <div class="article-summary"></div>
-            <div class="form-group text-center">
-                <button type="submit" name="previous" class="btn btn-warning">Go Back</button>
-                <button type="submit" name="print" class="btn btn-success ">Print Summary</button>
-                <button type="submit" name="analyze" class="btn btn-info ">Analyze Article</button>
             </div>
         </div>
     </div>
-
-    <!--<script type="module" src="assets/js/summarizer.js"></script>-->
-    <script src="bundle.js"></script>
-    <script type="text/javascript" src="assets/js/analyzer.js"></script>
+    <div class="float-right mt-5" style="color: #352606 ">
+        Final year project by
+        <!--Doyin Faith Kasumu-->
+    </div>
+    <script src="bundle.js "></script>
 </body>
 
 </html>
