Completed summarization module and added analysis

--- a/analysis.html
+++ b/analysis.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summarizr | Analysis</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -32,8 +32,8 @@
                                     Plagiarism Score
                                     <div class="plagiarism-score text-center">40</div>
                                 </div>
-                                <p class="score-breakdown">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
+                                <p class="plagiarism-score-breakdown text-center">
+                                    Lorem ipsum dolor sit amet, <br><br> consectetuer adipiscing elit. <br><br> Aenean commodo ligula eget dolor. <br>
                                 </p>
                             </div>
                             <div class="col-md-5">
@@ -41,25 +41,23 @@
                                     Content Depth Score
                                     <div class="content-depth-score text-center">60</div>
                                 </div>
-                                <p class="score-breakdown">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-                                </p>
+                                <p class="content-depth-score-breakdown text-center"></p>
                             </div>
                         </div>
                     </div>
                     <div class="form-group text-center" id="summaryNavButtons">
-                        <button type="button" name="previous" class="btn btn-warning">Go Back</button>
-                        <button type="button" name="print" class="btn btn-success ">Print</button>
+                        <button type="button" name="previous" class="btn btn-warning" onclick="window.location.href = 'index.html'" ">Go Back</button>
+                        <button type="button " name="print " class="btn btn-success " onclick="window.print() ">Print</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="float-right mb-4" style="color: #352606">
+    <div class="float-right mb-4 " style="color: #352606 ">
         Final year project by
         <!--Doyin Faith Kasumu-->
     </div>
-    <script src="bundle.js"></script>
+    <script src="bundle-analysis.js "></script>
 </body>
 
 </html>
