--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summarizr | Home</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -28,7 +28,8 @@
                     <form>
                         <div class="form-group">
                             <label for="title" class="label">Sentences</label>
-                            <input type="text" name="title" class="form-control" placeholder="How short should the summary be?">
+                            <input type="number" maxlength="5" name="sentence_length" class="form-control" placeholder="How short should the summary be?" />
+                            <span class="error-message">Sentences length should not be more than 5</span>
                         </div>
                         <div class="form-group">
                             <label for="article" class="label">Article</label>
@@ -36,7 +37,7 @@
                         </div>
                         <div class="form-group text-center mt-4">
                             <button type="button" name="summarize" class="btn btn-warning">Generate Summary</button>
-                            <button type="button" name="analyze" class="btn btn-info" onclick="window.location.href = '/projects/summarizer/analysis.html'">Analyze Article</button>
+                            <button type="button" name="analyze" class="btn btn-info">Analyze Article</button>
                             <button type="button" name="reset" class="btn btn-danger">Reset Form</button>
                         </div>
                     </form>
@@ -49,7 +50,7 @@
                         <button type="button" name="previous" class="btn btn-warning">Go Back</button>
                         <button type="button" name="formatSummery" class="btn btn-secondary">Format</button>
                         <button type="button" name="print" class="btn btn-success ">Print</button>
-                        <button type="button" name="analyze" class="btn btn-info" onclick="window.location.href = '/projects/summarizer/analysis.html'">Analyze Article</button>
+                        <button type="button" name="analyze" class="btn btn-info" onclick="window.location.href = 'analysis.html'">Analyze Article</button>
                     </div>
                 </div>
             </div>
