--- a/analysis.html
+++ b/analysis.html
@@ -26,26 +26,32 @@
                 <!-- Analysis -->
                 <div class="analysis">
                     <div class="analysis-score">
-                        <div class="row">
-                            <div class="col-md-3 offset-md-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-6">
                                 <div class="text-center">
-                                    Plagiarism Score
-                                    <div class="plagiarism-score text-center">40</div>
+                                    <small>Plagiarism Score</small>
+                                    <div class="plagiarism-score text-center">20</div>
+                                    <hr />
+                                    <div class="plagiarism-score-summary">ORIGINAL</div>
+                                    <hr /><small>Here is the breakdown:</small><br /><br />
                                 </div>
                                 <p class="plagiarism-score-breakdown text-center">
                                     Lorem ipsum dolor sit amet, <br><br> consectetuer adipiscing elit. <br><br> Aenean commodo ligula eget dolor. <br>
                                 </p>
                             </div>
-                            <div class="col-md-5">
+                            <div class="col-md-6">
                                 <div class="text-center">
-                                    Content Depth Score
+                                    <small>Content Depth Score</small>
                                     <div class="content-depth-score text-center">60</div>
+                                    <hr />
+                                    <div class="content-depth-score-summary"></div>
+                                    <hr /><small>Here is the breakdown:</small><br /><br />
                                 </div>
                                 <p class="content-depth-score-breakdown text-center"></p>
                             </div>
                         </div>
                     </div>
-                    <div class="form-group text-center" id="summaryNavButtons">
+                    <div class="form-group text-center mt-5" id="summaryNavButtons">
                         <button type="button" name="previous" class="btn btn-warning" onclick="window.location.href = 'index.html'" ">Go Back</button>
                         <button type="button " name="print " class="btn btn-success " onclick="window.print() ">Print</button>
                     </div>
@@ -57,7 +63,7 @@
         Final year project by
         <!--Doyin Faith Kasumu-->
     </div>
-    <script src="bundle-analysis.js "></script>
+    <script src="/assets/js/bundle-analysis.js "></script>
 </body>
 
 </html>
