--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div class="form-group">
                             <label for="title" class="label">Sentences</label>
                             <input type="number" maxlength="5" name="sentence_length" class="form-control" placeholder="How short should the summary be?" />
-                            <span class="error-message">Sentences length should not be more than 5</span>
+                            <span class="error-message"></span>
                         </div>
                         <div class="form-group">
                             <label for="article" class="label">Article</label>
@@ -37,8 +37,8 @@
                         </div>
                         <div class="form-group text-center mt-4">
                             <button type="button" name="summarize" class="btn btn-warning">Generate Summary</button>
-                            <button type="button" name="analyze" class="btn btn-info">Analyze Article</button>
-                            <button type="button" name="reset" class="btn btn-danger">Reset Form</button>
+                            <button type="button" name="analyze" class="btn btn-info btn-disabled" disabled>Analyze Article</button>
+                            <button type="button" name="reset" class="btn btn-danger">Reset</button>
                         </div>
                     </form>
                 </div>
@@ -48,7 +48,7 @@
                     <div class="article-summary"></div>
                     <div class="form-group text-center" id="summaryNavButtons">
                         <button type="button" name="previous" class="btn btn-warning">Go Back</button>
-                        <button type="button" name="formatSummery" class="btn btn-secondary">Format</button>
+                        <!--<button type="button" name="formatSummery" class="btn btn-secondary">Format</button>-->
                         <button type="button" name="print" class="btn btn-success ">Print</button>
                         <button type="button" name="analyze" class="btn btn-info" onclick="window.location.href = 'analysis.html'">Analyze Article</button>
                     </div>
@@ -57,10 +57,9 @@
         </div>
     </div>
     <div class="float-right mt-5" style="color: #352606 ">
-        Final year project by
-        <!--Doyin Faith Kasumu-->
+        Final year project by Doyin Faith Kasumu
     </div>
-    <script src="bundle.js "></script>
+    <script src="assets/js/bundle.js "></script>
 </body>
 
 </html>
