--- a/analysis.html
+++ b/analysis.html
@@ -60,10 +60,9 @@
         </div>
     </div>
     <div class="float-right mb-4 " style="color: #352606 ">
-        Final year project by
-        <!--Doyin Faith Kasumu-->
+        Final year project by Doyin Faith Kasumu
     </div>
-    <script src="/assets/js/bundle-analysis.js "></script>
+    <script src="assets/js/bundle-analysis.js "></script>
 </body>
 
 </html>
