--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <form>
                         <div class="form-group">
                             <label for="title" class="label">Sentences</label>
-                            <input type="number" maxlength="5" name="sentence_length" class="form-control" placeholder="How short should the summary be?" />
+                            <input type="number" max="5" min="1" name="sentence_length" class="form-control" placeholder="How short should the summary be?" value="3" />
                             <span class="error-message"></span>
                         </div>
                         <div class="form-group">
