--- a/analysis.html
+++ b/analysis.html
@@ -26,20 +26,8 @@
                 <!-- Analysis -->
                 <div class="analysis">
                     <div class="analysis-score">
-                        <div class="row no-gutters">
-                            <div class="col-md-6">
-                                <div class="text-center">
-                                    <small>Plagiarism Score</small>
-                                    <div class="plagiarism-score text-center">20</div>
-                                    <hr />
-                                    <div class="plagiarism-score-summary">ORIGINAL</div>
-                                    <hr /><small>Here is the breakdown:</small><br /><br />
-                                </div>
-                                <p class="plagiarism-score-breakdown text-center">
-                                    Lorem ipsum dolor sit amet, <br><br> consectetuer adipiscing elit. <br><br> Aenean commodo ligula eget dolor. <br>
-                                </p>
-                            </div>
-                            <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-8 offset-md-2">
                                 <div class="text-center">
                                     <small>Content Depth Score</small>
                                     <div class="content-depth-score text-center">60</div>
@@ -51,7 +39,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group text-center mt-5" id="summaryNavButtons">
+                    <div class="form-group text-center" id="summaryNavButtons">
                         <button type="button" name="previous" class="btn btn-warning" onclick="window.location.href = 'index.html'" ">Go Back</button>
                         <button type="button " name="print " class="btn btn-success " onclick="window.print() ">Print</button>
                     </div>
