--- a/index.html
+++ b/index.html
@@ -1,65 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Summarizr | Home</title>
+		<link rel="stylesheet" href="assets/css/bootstrap.css" />
+		<link rel="stylesheet" href="assets/css/style.css" />
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summarizr | Home</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-</head>
-
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="offset-md-2 col-md-8 content mt-5">
-                <div class="row">
-                    <div class="col-md-10 mb-6">
-                        <h2 id="appTitle">SUMMARIZR</h2>
-                        <p id="appTagline">Analyze and Summarize your articles on the fly..</p>
-                    </div>
-                    <div class="col-md-2 mb-6">
-                        <img src="assets/img/polylogo.jpg" alt="logo" width="70px" />
-                    </div>
-                </div>
-                <!-- Article Form -->
-                <div class="article-form">
-                    <form>
-                        <div class="form-group">
-                            <label for="title" class="label">Sentences</label>
-                            <input type="number" max="5" min="1" name="sentence_length" class="form-control" placeholder="How short should the summary be?" value="3" />
-                            <span class="error-message"></span>
-                        </div>
-                        <div class="form-group">
-                            <label for="article" class="label">Article</label>
-                            <textarea name="article" cols="30" rows="10" placeholder="Paste the article body here.." class="form-control"></textarea>
-                        </div>
-                        <div class="form-group text-center mt-4">
-                            <button type="button" name="summarize" class="btn btn-warning">Generate Summary</button>
-                            <button type="button" name="analyze" class="btn btn-info btn-disabled" disabled>Analyze Article</button>
-                            <button type="button" name="reset" class="btn btn-danger">Reset</button>
-                        </div>
-                    </form>
-                </div>
-                <!-- Article Summary -->
-                <div class="article-summary-container mt-4">
-                    <div class="article-title"></div>
-                    <div class="article-summary"></div>
-                    <div class="form-group text-center" id="summaryNavButtons">
-                        <button type="button" name="previous" class="btn btn-warning">Go Back</button>
-                        <!--<button type="button" name="formatSummery" class="btn btn-secondary">Format</button>-->
-                        <button type="button" name="print" class="btn btn-success ">Print</button>
-                        <button type="button" name="analyze" class="btn btn-info" onclick="window.location.href = 'analysis.html'">Analyze Article</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="float-right mt-5" style="color: #352606 ">
-        Final year project by Doyin Faith Kasumu
-    </div>
-    <script src="assets/js/bundle.js "></script>
-</body>
-
+	<body>
+		<div class="container">
+			<div class="row">
+				<div class="offset-md-2 col-md-8 content mt-5">
+					<div class="row">
+						<div class="col-md-10 mb-6">
+							<h2 id="appTitle">SUMMARIZR</h2>
+							<p id="appTagline">
+								Analyze and Summarize your articles on the fly..
+							</p>
+						</div>
+						<div class="col-md-2 mb-6"></div>
+					</div>
+					<!-- Article Form -->
+					<div class="article-form">
+						<form>
+							<div class="form-group">
+								<label for="title" class="label">Sentences</label>
+								<input
+									type="number"
+									max="5"
+									min="1"
+									name="sentence_length"
+									class="form-control"
+									placeholder="How short should the summary be?"
+									value="3"
+								/>
+								<span class="error-message"></span>
+							</div>
+							<div class="form-group">
+								<label for="article" class="label">Article</label>
+								<textarea
+									name="article"
+									cols="30"
+									rows="10"
+									placeholder="Paste the article body here.."
+									class="form-control"
+								></textarea>
+							</div>
+							<div class="form-group text-center mt-4">
+								<button type="button" name="summarize" class="btn btn-warning">
+									Generate Summary
+								</button>
+								<button
+									type="button"
+									name="analyze"
+									class="btn btn-info btn-disabled"
+									disabled
+								>
+									Analyze Article
+								</button>
+								<button type="button" name="reset" class="btn btn-danger">
+									Reset
+								</button>
+							</div>
+						</form>
+					</div>
+					<!-- Article Summary -->
+					<div class="article-summary-container mt-4">
+						<div class="article-title"></div>
+						<div class="article-summary"></div>
+						<div class="form-group text-center" id="summaryNavButtons">
+							<button type="button" name="previous" class="btn btn-warning">
+								Go Back
+							</button>
+							<button type="button" name="print" class="btn btn-success">
+								Print
+							</button>
+							<button
+								type="button"
+								name="analyze"
+								class="btn btn-info"
+								onclick="window.location.href = 'analysis.html'"
+							>
+								Analyze Article
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script src="assets/js/bundle-summarizer.js"></script>
+	</body>
 </html>
